kubernetes/core/pocket-id/app/resources/Deployment--core-pocket-id--pocket-id.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocket-id
  namespace: core-pocket-id
spec:
  replicas: 1
  strategy:
    type: "Recreate"
  selector:
    matchLabels:
      app: pocket-id
  template:
    metadata:
      labels:
        app: pocket-id
    spec:
      containers:
        - name: pocket-id
          image: ghcr.io/pocket-id/pocket-id:v1.13.1-distroless
          ports:
            - containerPort: 1411
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /app/data
          resources:
            requests:
              cpu: "20m"
              memory: "64Mi"
            limits:
              memory: "64Mi"
          securityContext:
            runAsNonRoot: true
            runAsUser: 65532
            runAsGroup: 65532
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
      securityContext:
        fsGroup: 65532
        fsGroupChangePolicy: OnRootMismatch
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pocket-id
