kubernetes/core/pocket-id/app/resources/Service--core-pocket-id--pocket-id.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
  namespace: core-pocket-id
spec:
  type: ClusterIP
  selector:
    app: pocket-id
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1411
